actual-budget/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-http-api
  namespace: actual-budget
  labels:
    app: actual-http-api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: actual-http-api
  template:
    metadata:
      labels:
        app: actual-http-api
    spec:
      containers:
        - name: actual-http-api
          image: jhonderson/actual-http-api:26.7.0@sha256:7bb545a83456660dda1484f7f1197e1c0a4c1066ede3b7d924cd2e1eabbdbd73
          ports:
            - containerPort: 5007
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 5007
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 5007
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: actual-budget-api-data
---
apiVersion: v1
kind: Service
metadata:
  name: actual-http-api
  namespace: actual-budget
spec:
  selector:
    app: actual-http-api
  ports:
    - port: 5007
      targetPort: 5007
      nodePort: 30508
      name: http
  type: NodePort
